--- a/src/index.css
+++ b/src/index.css
@@ -9,8 +9,8 @@
   font-family: "Lufga", "Times New Roman", serif;
 }
 .autl .me-2 {
-  width: 60px;
-  height: 60%;
+  width: 100px;
+  height: 90%;
 }
 .btn-primary {
     color: #fff;
@@ -39,10 +39,13 @@ font-family: "Poppins", sans-serif;
     margin: 0 !important;
 }
 h2, .h2 {
-    font-size: calc(1.325rem + 0.9vw);
+    font-size: calc(1.340rem + 0.9vw);
     font-family: "Lufga", "Times New Roman", serif;
-    font-weight: 600;
+    font-weight: 900;
     line-height: 1.1;
+}
+p {
+     font-family: "Lufga", "Times New Roman", serif;
 }
 hr {
     margin: 1rem 0;
